[gd_scene load_steps=2 format=3 uid="uid://bh2xeqs3layq"]

[ext_resource type="Script" uid="uid://dhijieqcf2a4n" path="res://scripts/debug_ui.gd" id="1_3vyb8"]

[node name="DebugUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_3vyb8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
modulate = Color(1, 1, 1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Debug Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CurrentState" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Current State: idle"

[node name="Velocity" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Velocity: (0.0, 0.0, 0.0)"

[node name="OnFloor" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "On Floor: true"

[node name="InputVector" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Input: (0.0, 0.0)"